fix: guess form overflows

--- a/css/guess_dog_breed.css
+++ b/css/guess_dog_breed.css
@@ -17,6 +17,14 @@
     font-size: 2rem;
 }
 
+form {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    justify-content: center;
+    align-items: center;
+}
+
 @media screen and (min-width: 500px) {
     #image-spot {
         min-width: 24rem;
